--- a/wagtail/wagtailadmin/static_src/wagtailadmin/scss/components/_typography.scss
+++ b/wagtail/wagtailadmin/static_src/wagtailadmin/scss/components/_typography.scss
@@ -41,7 +41,7 @@ p {
 }
 
 a {
-    @include transition(color 0.2s ease, background-color 0.2s ease);
+    // @include transition(color 0.2s ease, background-color 0.2s ease);
     outline: none;
     color: $color-link;
     text-decoration: none;
@@ -65,8 +65,8 @@ kbd {
     padding: 0.3em 0.5em;
 }
 
-dl, 
-dt, 
+dl,
+dt,
 dd {
     padding: 0;
     margin: 0;
@@ -107,8 +107,8 @@ dd {
     }
 }
 
-    .help-info, 
-    .help-warning, 
+    .help-info,
+    .help-warning,
     .help-critical {
         border-radius: 3px;
         padding-left: 3.5em;
